# SnnMnist

./: Diehl&Cook_MNIST_evaluation.py  Diehl&Cook_spiking_MNIST_Brian2.py  README.md  pyproject.toml
src/: Diehl&Cook_spiking_MNIST_Brian2.py  data_handler.py  evaluation.py  experiment.py  hyperparameters.py  plotting.py
src/examples/: neuron_state_plot.py
