[tool.poetry]
name = "brian2stdpmnist"
version = "0.1.0"
description = ""
authors = ["Philipp <philipp.wundrack@live.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
brian2 = "^2.5.4"
brian2tools = "^0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
